--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDO7lVM06dZF-i7xDxZjWz8V3YK55W_KzM&libraries=places" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDO7lVM06dZF-i7xDxZjWz8V3YK55W_KzM&libraries=places&loading=async" async defer></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
