try fix address

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
   <body>
     <div id="root"></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDO7lVM06dZF-i7xDxZjWz8V3YK55W_KzM&libraries=places&loading=async" async defer></script>
+    <script src="https://unpkg.com/@googlemaps/extended-component-library@latest/dist/index.min.js" defer></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
